# ImGui.NET-nativebuild

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ImGui.NET.SourceBuild.csproj  ImGui.NET.SourceBuild.props  README.md  build-native.cmd  build-native.sh  ci-build.cmd  ci-build.sh  cimgui_config.h  copy-jsons-to-generatecode-csharp.cmd  generate-all.cmd  version.json  versions.json
.github/workflows/: build.yml  manual-release.yml
cmake/cimCTE/: CMakeLists.txt
cmake/cimgui/: CMakeLists.txt
cmake/cimguizmo/: CMakeLists.txt
cmake/cimnodes/: CMakeLists.txt
patches/: cimnodes_r.patch
scripts/: check-exports.py  check-exports.sh
src/: cimgui_assert.cpp
tests/ImGuiNativeTests/: AssertHandlerTests.cs  ContextTests.cs  FreeTypeTests.cs  ImGuiNativeTests.csproj  NativeLib.cs
